testing my a commit from my new linux.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <button id = "new-game-btn">New Game!</button>
     <button id = "hit-btn">Hit!</button>
     <button id = "stay-btn">Stay</button>
-
+    
+    <p>Happy Day!</p>
     <script type="text/javascript" src="blackjack.js"></script>
   </body>
 
